# testing-web-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-app.yml
src/: app.py  config.py  db.py  di.py
src/api/: router.py  schemas.py
src/domain/: exceptions.py  models.py
src/domain/calculator/: calculator.py  strategies.py
src/migrations/: env.py
src/migrations/versions/: 24a23a5c1748_create_table.py
src/repositories/: calc_repository.py
src/services/: calc_service.py
src/tests/: conftest.py
src/tests/e2e/: test_api.py
src/tests/integration/: test_calc_repository.py
src/tests/unit/: conftest.py  test_calc_service_with_fake.py  test_calc_service_with_mock.py
