[tool.poetry]
name = "testing-web-python"
version = "0.1.0"
description = "Testing web services in Python"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.30"
dependency-injector = "^4.41.0"
pydantic-settings = "^2.3.3"
alembic = "^1.13.1"
asyncpg = "^0.30.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
black = "^24.4.2"
isort = "^5.13.2"
pytest-asyncio = "^0.26.0"
testcontainers = {extras = ["postgres"], version = "^4.9.2"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line_length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
addopts = [
    "-v",
    "--cov=src",
    "--cov-report=html",
]
testpaths = ["src/tests"]

[tool.coverage.run]
branch = true
source = ["src"]
omit = [
    "src/tests/*",
    "__init__.py",
    "src/config.py",
    "src/di.py",
    "src/db.py"
]

[tool.coverage.report]
exclude_also = [
    "raise NotImplementedError",
]
